--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-planes-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://festive-euler-86d3c9.netlify.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
