--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
     "react-media-hook": "^0.4.7",
     "react-owl-carousel": "^2.3.1",
     "react-scripts": "3.4.3",
