--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-alice-carousel": "^2.0.2",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-iframe": "^1.8.0",
     "react-media-hook": "^0.4.7",
-    "react-owl-carousel": "^2.3.1",
-    "react-scripts": "3.4.3",
-    "react-text-truncate": "^0.16.0"
+    "react-scripts": "^4.0.0",
+    "react-text-truncate": "^0.16.0",
+    "style-loader": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
